tests/fail/elaboration/string-literal/not-supported.snap
stdout = ''
stderr = '''
error: string literal not supported for expected type
  ┌─ tests/fail/elaboration/string-literal/not-supported.fathom:3:1
  │
3 │ "hello" : Void
  │ ^^^^^^^

'''
